fixed spacing of containers in dashboard

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -44,11 +44,12 @@ body {
 }
 .container {
     max-width: 960px;
+    float: left;
     margin: 2vh 20px auto 20vw;
+    position: relative;
     padding-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 0;
     background-color: rgba(255, 255, 255, 0.8);
     width: 28vw;
     min-width: 400px;
@@ -61,7 +62,6 @@ body {
 }
 .mini-calendar {
     max-width: 960px;
-    float: inline-end;
     margin: 2vh auto auto auto;
     padding-top: 20px;
     padding-left: 20px;
